--- a/Voron Poster/MainForm.resx
+++ b/Voron Poster/MainForm.resx
@@ -128,6 +128,13 @@
         AElFTkSuQmCC
 </value>
   </data>
+  <data name="aboutLicenseLabel.Text" xml:space="preserve">
+    <value>Данная программа является программой с открытым исходным кодом и распространяется под лицензией Apache 2.0 текст которой прилагается. Все технологии/компоненты/
+библиотеки/продукты использованные в программе, а также прилагающиеся лицензии перечислены ниже.</value>
+  </data>
+  <data name="aboutSupportLabel.Text" xml:space="preserve">
+    <value>По поводу предложений, вопросов, общих багов пишите на e-mail с темой "Voron Poster". При проблемах с конкретным сайтом отправляйте отчет из вкладки отчет в окне которое откроется если нажать на статусе с ошибкой.</value>
+  </data>
   <metadata name="TasksUpdater.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
